--- a/Dadoga/bin/src/main/resources/application.properties
+++ b/Dadoga/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # dataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafit_final?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafy_board?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=ssafy
 
